--- a/config/secrets.yml.example
+++ b/config/secrets.yml.example
@@ -85,7 +85,7 @@ default: &default
     password: changeme
     domain: changeme
   microcredits:
-    default_brand: podemos
+    default_brand: Más Madrid
     brands:
       podemos:
         allow_login: true
@@ -95,7 +95,7 @@ default: &default
         mail_from: changeme
         mail_signature: changeme
         main_url: http://microcreditos.podemos.info
-        name: Podemos
+        name: Más Madrid
   microcredit_loans:
     max_loans_per_ip: 50
     max_loans_per_user: 30
