--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ dump.rdb
 non-public/
 
 config/secrets-local.yml
+
+Gemfile.lock
+db/schema.rb
+
+public/nb.php
+public/form-candidaturas.php
+public/files-candidaturas/img/imagenes-candidato.zip
